# health-ai-assisstant

./: .env.example  .gitignore  App.jsx  Dockerfile  README.md  ai_assistant.db  docker-compose.yml  index.html  main.js  package-lock.json  package.json  render.yaml  tailwind.config.cjs
backend/: pyproject.toml
backend/ai_desktop_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/models/: database.py  schemas.py
frontend/: package.json
frontend/src/: index.css
