[project]
name = "ai-desktop-assistant"
version = "0.1.0"
description = "Autonomous AI Desktop Assistant — FastAPI Backend"
requires-python = ">=3.8"
dependencies = [
    # Web Framework
    "fastapi>=0.100.0,<0.112.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy[asyncio]>=2.0.20",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    # AI / LLM (deferred — installed when API keys are configured)
    "openai>=1.3.0",
    "httpx>=0.24.0",
    # Desktop Automation
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    # OCR
    "Pillow>=9.5.0",
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
